Updating lodash dependency to fix security vulnerability

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^7.16.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
+    "lodash": "^4.17.21",
     "mocha": "^8.2.1",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.6",
