--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "sinon-chai": "^3.5.0",
     "sonarqube-scanner": "^2.8.0",
     "supertest": "^6.0.1",
+    "trim-newlines": "^3.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
